# meteobar

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
src/: api.rs  cache.rs  format.rs  icons.rs  main.rs  theme.rs  waybar.rs
