[package]
name = "meteobar"
version = "0.1.1"
edition = "2021"
description = "A weather widget for Waybar using Open-Meteo"
license = "MIT"
repository = "https://github.com/mryll/meteobar"
keywords = ["waybar", "weather", "wayland", "hyprland"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "native-tls"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dirs = "6.0"
unicode-width = "0.2"

[profile.release]
strip = true
lto = true
opt-level = "s"
